# indian-constitution-rag-chatbot

./: .gitignore  README.md  app.py  batch_query.py  chatbot_responses.txt  chunks_output.txt  data_loader.py  explore_csv.py  pyproject.toml  rag_pipleline.py  requirements.txt  streamlit_callback_handler.py  vector_store.py
vector_store/: index.pkl
